03/template-09.yaml
AWSTemplateFormatVersion: "2010-09-09"

Parameters:
  KeyPair:
    Type: AWS::EC2::KeyPair::KeyName

Resources:

  Vpc:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16

  InternetGateway:
    Type: AWS::EC2::InternetGateway

  InternetGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref Vpc
      InternetGatewayId: !Ref InternetGateway

  RouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref Vpc

  RouteTableInternetGatewayRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref RouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  Subnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref Vpc
      CidrBlock: 10.0.0.0/24
      MapPublicIpOnLaunch: true

  SubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref RouteTable
      SubnetId: !Ref Subnet

  SshSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allows SSH access from all IPs
      VpcId: !Ref Vpc
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0

  HttpSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allows HTTP access from all IPs
      VpcId: !Ref Vpc
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0

  Ec2InstanceRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: "2012-10-17"
        Statement:
          - Effect: "Allow"
            Principal:
              Service:
                - "ec2.amazonaws.com"
            Action:
              - "sts:AssumeRole"
      Path: /
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/CloudWatchAgentServerPolicy

  Ec2InstanceInstanceProfile:
    Type: AWS::IAM::InstanceProfile
    Properties:
      Roles:
        - !Ref Ec2InstanceRole

  EC2:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: t2.micro
      SubnetId: !Ref Subnet
      ImageId: ami-00a205cb8e06c3c4e
      SecurityGroupIds: [ !Ref SshSecurityGroup, !Ref HttpSecurityGroup ]
      KeyName: !Ref KeyPair
      IamInstanceProfile: !Ref Ec2InstanceInstanceProfile
      UserData: !Base64
        Fn::Sub: |
          #!/bin/bash -xe
          yum update -y
          yum install -y aws-cfn-bootstrap

          # Install the files and packages from the metadata
          /opt/aws/bin/cfn-init -v \
            --stack ${AWS::StackName} \
            --resource EC2 \
            --configsets install \
            --region ${AWS::Region}
    Metadata:
      AWS::CloudFormation::Init:
        configSets:
          install: [ installCloudwatchAgent, installHttpd ]
        installHttpd:
          packages:
            yum:
              httpd: [ ]
          services:
            sysvinit:
              httpd:
                enabled: true
                ensureRunning: true
          commands:
            init-html:
              command: |
                INSTANCE_ID=$(curl -s http://169.254.169.254/latest/meta-data/instance-id)
                echo "<h1>Hello from $INSTANCE_ID with CFN Init!</h1>" > /var/www/html/index.html
          files:
            /var/www/html/index2.html:
              content: !Sub "<h2>CFN StackName: ${AWS::StackName}</h2>"
              mode: "000644"
              owner: "root"
              group: "root"
        installCloudwatchAgent:
          packages:
            yum:
              amazon-cloudwatch-agent: [ ]
          files:
            /etc/cloudwatch-agent-config.json:
              content: !Sub |
                {
                        "agent": {
                                "metrics_collection_interval": 60
                        },
                        "logs": {
                                "logs_collected": {
                                        "files": {
                                                "collect_list": [
                                                        {
                                                                "file_path": "/var/log/messages",
                                                                "log_group_name": "${AWS::StackName}/ec2/messages",
                                                                "log_stream_name": "{instance_id}"
                                                        }
                                                ]
                                        }
                                }
                        },
                        "metrics": {
                                "namespace": "MyApp",
                                "append_dimensions": {
                                        "StackName": "${AWS::StackName}",
                                        "InstanceId": "${!aws:InstanceId}"
                                },
                                "metrics_collected": {
                                        "mem": {
                                                "measurement": [
                                                        "mem_used_percent"
                                                ],
                                                "metrics_collection_interval": 60
                                        }
                                }
                        }
                }
              mode: "000400"
              owner: "root"
              group: "root"
          commands:
            start-agent:
              command: "/opt/aws/amazon-cloudwatch-agent/bin/amazon-cloudwatch-agent-ctl -a fetch-config -m ec2 -s -c file:/etc/cloudwatch-agent-config.json"

  Ec2MemHighUsageAlarm:
    Type: AWS::CloudWatch::Alarm
    Properties:
      AlarmDescription: Checks if EC2 mem usage is exceeding 80%
      Namespace: MyApp
      Dimensions:
        - Name: InstanceId
          Value: !Ref EC2
      MetricName: mem_used_percent
      ComparisonOperator: GreaterThanThreshold
      Threshold: 80
      Unit: Percent
      EvaluationPeriods: 1
      Period: 60
      Statistic: Maximum

Outputs:
  Ec2Ip:
    Value: !GetAtt EC2.PublicIp
